[gd_scene load_steps=3 format=2]

[ext_resource path="res://game/rooms/room02/panel/panel.png" type="Texture" id=1]
[ext_resource path="res://game/rooms/room02/panel/panel.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
position = Vector2( 640, 450 )
z_index = 4096

[node name="Panel" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -450.0
margin_right = 640.0
margin_bottom = 450.0
script = ExtResource( 2 )

[node name="ColorRect" type="Panel" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -379.0
margin_top = -271.5
margin_right = 379.0
margin_bottom = 271.5

[node name="TextureRect" type="TextureRect" parent="Panel/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -256.0
margin_right = 256.0
margin_bottom = 256.0
texture = ExtResource( 1 )

[node name="Button" type="Button" parent="Panel"]
margin_left = 283.0
margin_top = 200.0
margin_right = 370.0
margin_bottom = 252.0
text = "x"

[node name="n" type="Button" parent="Panel"]
show_behind_parent = true
margin_left = 845.0
margin_top = 516.0
margin_right = 897.0
margin_bottom = 558.0

[node name="ok" type="Button" parent="Panel"]
show_behind_parent = true
margin_left = 394.0
margin_top = 658.0
margin_right = 446.0
margin_bottom = 700.0

[connection signal="pressed" from="Panel/Button" to="Panel" method="_on_close_pressed"]
[connection signal="pressed" from="Panel/n" to="Panel" method="_on_n_pressed"]
[connection signal="pressed" from="Panel/n" to="Panel" method="_on_btn_pressed"]
[connection signal="pressed" from="Panel/ok" to="Panel" method="_on_ok_pressed"]
[connection signal="pressed" from="Panel/ok" to="Panel" method="_on_btn_pressed"]
